[gd_scene load_steps=10 format=2]

[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela7/XERETA_litle_icon.png" type="Texture" id=1]
[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela7/Camada 1710.png" type="Texture" id=2]
[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela7/VITAL_litle_icon.png" type="Texture" id=3]
[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela7/Ze_litle_icon.png" type="Texture" id=4]
[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela7/CIDA_litle_icon.png" type="Texture" id=5]
[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela7/LEGIS_litle_icon.png" type="Texture" id=6]
[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela7/ADAO_litle_icon.png" type="Texture" id=7]
[ext_resource path="res://Prefabs/SliderScore.gd" type="Script" id=8]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="SliderBackg" type="TextureRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = -432.0
margin_right = -80.0
margin_bottom = -402.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderZe" type="HSlider" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -78.0
margin_right = -171.0
margin_bottom = 51.0
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 8 )
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderLegis" type="HSlider" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -78.0
margin_right = -171.0
margin_bottom = 51.0
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 8 )
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderVital" type="HSlider" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -78.0
margin_right = -171.0
margin_bottom = 51.0
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 8 )
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderCida" type="HSlider" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -78.0
margin_right = -171.0
margin_bottom = 51.0
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 8 )
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderXereta" type="HSlider" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -78.0
margin_right = -171.0
margin_bottom = 51.0
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 8 )
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderAdao" type="HSlider" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -78.0
margin_right = -171.0
margin_bottom = 51.0
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 8 )
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}
